--- a/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
+++ b/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
@@ -11,10 +11,6 @@
         "mDgbUHAGgjLW",
         "H0kj-8xxnORC",
         "PBTbrJXOngz2",
-        "ylSl6qgtp1ck",
-        "ZWILFDl5p1ck",
-        "E6MkPsBcp1cl",
-        "2cELzS2fp1cl",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -79,7 +75,8 @@
       "cell_type": "markdown",
       "source": [
         "##### **Project Type**    - EDA\n",
-        "##### **Contribution**    - Individual/Team\n",
+        "##### **Contribution**    - Team\n",
+        "\n",
         "##### **Team Member 1 -** Sailendu Kumar Dey\n",
         "##### **Team Member 2 -** Harshit Thakur\n",
         "##### **Team Member 3 -**\n",
@@ -1607,7 +1604,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "1. From **1990 to 2015**, the death and wounded numbers had increased.\n",
+        "2. After **2015**, there were a slight fall in numbers.\n",
+        "3. Between **1970-77**, there were less amount of people killed and wounded.\n",
+        "4. Both the **killed and wounded** patterns are almost same.\n",
+        "5. Both the graphs are directly propertional to each other."
       ],
       "metadata": {
         "id": "ngGi97qjphqQ"
@@ -1654,7 +1655,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "1. Comparision among **Targeted Institutions and number of attacks**.\n",
+        "2. Identifing the number of attacks in Targeted Institutions.\n",
+        "3. Can compare the number of attacks among the Institutions."
       ],
       "metadata": {
         "id": "8agQvks0phqQ"
@@ -1672,7 +1675,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "1. **Private citizens and properties** are most targeted by the terrorist groups.\n",
+        "2. **Military and Police** were among the next most targeted Institutions.\n",
+        "3. **Goverment and Business** were the next affected."
       ],
       "metadata": {
         "id": "Qp13pnNzphqQ"
@@ -1695,8 +1700,8 @@
         "sns.barplot(x=newdata1['natlty1_txt'].value_counts()[:10].index,\n",
         "            y=newdata1['natlty1_txt'].value_counts()[:10].values,\n",
         "            palette=\"viridis\")\n",
-        "plt.title('Attackers Nationality')\n",
-        "plt.xlabel('Attackers Nationality')\n",
+        "plt.title('Victims Nationality')\n",
+        "plt.xlabel('Victims Nationality')\n",
         "plt.ylabel('No of Attacks')\n",
         "#plt.xticks(rotation= 30)\n",
         "plt.show()\n"
@@ -1719,7 +1724,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "1. Comparision among **Attackers Nationality and number of attacks**.\n",
+        "2. Identifing the number of attacks on the Targeted Nationalities.\n",
+        "3. Can compare the number of attacks among the countries."
       ],
       "metadata": {
         "id": "-vsMzt_np1ck"
@@ -1737,169 +1744,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "1. **Iraq, pakistan and India's** people were among the most affected by terrorism.\n",
+        "2. Almost **25000** people in Iraq, **14000** approx in pakistan and **13000** for India.\n",
+        "3. Also **Afganistan, Colombia, Phillipines, Peru, El Salvador, United States, and Turkey** are among the the **Top 10** countries in the world."
       ],
       "metadata": {
         "id": "ZYdMsrqVp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 12"
-      ],
-      "metadata": {
-        "id": "n3dbpmDWp1ck"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "EV-UWBvHGArq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 12 visualization code\n"
-      ],
-      "metadata": {
-        "id": "bwevp1tKp1ck"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "ylSl6qgtp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "m2xqNkiQp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "ZWILFDl5p1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "x-lUsV2mp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "M7G43BXep1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**3. Will the gained insights help creating a positive business impact?**\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "JMzcOPDDphqR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 13"
-      ],
-      "metadata": {
-        "id": "Ag9LCva-p1cl"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 13 visualization code"
-      ],
-      "metadata": {
-        "id": "EUfxeq9-p1cl"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "E6MkPsBcp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "V22bRsFWp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "2cELzS2fp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "ozQPc2_Ip1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "GL8l1tdLp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "5wwDJXsLp1cl"
       }
     },
     {
@@ -1915,8 +1765,7 @@
       "cell_type": "code",
       "source": [
         "# made new dataset for Correlation\n",
-        "corr_data1 = data[['year', 'month', 'day', 'country', 'latitude', 'longitude',\n",
-        " 'specificity', 'region', 'attacktype1', 'targtype1', 'natlty1', 'claimed', 'weaptype1', 'suicide']]\n",
+        "corr_data1 = data[['year', 'country', 'Killed','Wounded', 'region', 'attacktype1', 'targtype1', 'natlty1', 'weaptype1']]\n",
         "list[corr_data1.columns]"
       ],
       "metadata": {
@@ -1950,7 +1799,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "1. **Visualizing relationships**: Correlation heatmaps provide a visual representation of the strength and direction of relationships between variables.\n",
+        "\n",
+        "2. **Identifying correlations**: Correlation heatmaps help identify variables that are strongly correlated, positively or negatively. High positive correlation (close to 1) suggests that the variables move in the same direction, while high negative correlation (close to -1) indicates an inverse relationship. These insights are helpful for feature selection, identifying redundant variables, or understanding dependencies.\n",
+        "\n",
+        "3. **Data exploration**: Correlation heatmaps enable quick exploration of large datasets with multiple variables."
       ],
       "metadata": {
         "id": "DVPuT8LYZNRQ"
@@ -1968,7 +1821,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "1. Most of the variables are not co-related.\n",
+        "2. **'Year**' and '**Region**' are slightly co-related.\n",
+        "3. **'Weapon-type'** and **'Attacked-type**' are co-related.\n",
+        "4. **'Nationality'** and **'Country'** are co-related.\n",
+        "5. **'Wounded'** and **'Killed'** are also co-related."
       ],
       "metadata": {
         "id": "bfSqtnDqZNRR"
@@ -1986,32 +1843,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# corr_data3 = data[['year', 'month', 'day', 'country', 'latitude', 'longitude',\n",
-        "#  'specificity', 'region', 'attacktype1', 'targtype1', 'natlty1', 'claimed', 'weaptype1', 'suicide']]\n",
-        "# list[corr_data3.columns]"
-      ],
-      "metadata": {
-        "id": "TV-mZDEHABrN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# null_count1 = corr_data3.isnull().sum()\n",
-        "# null_count1"
-      ],
-      "metadata": {
-        "id": "73sOuEyeRpq4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "corr_data2 = data[['year', 'country', 'attacktype1', 'targtype1', 'weaptype1', 'natlty1', 'region']]\n",
+        "# visualization of Pair plot\n",
+        "corr_data2 = newdata1[['year', 'country', 'attacktype1', 'targtype1', 'weaptype1', 'natlty1', 'Killed', 'Wounded']]\n",
         "list[corr_data2.columns]"
       ],
       "metadata": {
@@ -2044,7 +1877,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "1. **Identifying relationships**: Pair plots allow you to quickly visualize the relationships between variables. By examining the scatterplots, you can get a sense of whether variables are positively or negatively correlated or if there's any nonlinear relationship.\n",
+        "\n",
+        "2. **Detecting patterns**: Pair plots help in identifying patterns or clusters in the data. If certain groups or clusters form in the scatterplots, it can indicate that the variables are related in a specific way.\n",
+        "\n",
+        "3. **Variable selection**: Pair plots can aid in variable selection by helping you identify which variables have a strong relationship with the target variable or with each other. This can be helpful in feature engineering or building predictive models.\n",
+        "\n",
+        "4. **Data quality checks**: Pair plots can also be used to detect anomalies or outliers in the data. Outliers may appear as points that deviate significantly from the general pattern in the scatterplots.1."
       ],
       "metadata": {
         "id": "eMmPjTByveiU"
@@ -2062,7 +1901,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "1. **Relationship between number of attacks and number of fatalities**: By examining the scatterplot between the variables representing the number of attacks and the number of fatalities, we can observe if there is a correlation between the two.\n",
+        "\n",
+        "2. **Geographical patterns in terrorist activities**: If the dataset includes variables such as latitude and longitude, a pair plot can help visualize the spatial distribution of terrorist activities..\n",
+        "\n",
+        "3. **Correlation between attack type and target type**: Pair plots can reveal the relationship between different attack types (e.g., bombings, armed assaults) and the types of targets (e.g., private citizens, military, government).\n",
+        "4. **Temporal trends in terrorism**: If the dataset includes a temporal variable, such as the year or month of the attacks, a pair plot can show how the number of attacks or fatalities has changed over time.\n",
+        "\n",
+        "5. **Correlation between terrorist group and attack characteristics**: Pair plots can be used to explore the relationship between the terrorist group responsible for an attack and various characteristics of the attack, such as the weapons used or the target type.\n",
+        "\n",
+        "6. **Identifying outliers and anomalies**: Pair plots can help detect outliers or unusual patterns in the data."
       ],
       "metadata": {
         "id": "uPQ8RGwHveiV"
@@ -2114,7 +1962,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "To achieve the business objective using the global terrorism dataset, it's important to understand the specific goals and requirements of the client. However, here are some general suggestions that can help leverage the dataset for various business objectives related to global terrorism:\n",
+        "\n",
+        "1. **Trend analysis**: Conduct a comprehensive analysis of trends and patterns in global terrorism over time. This can involve examining the frequency, intensity, and geographical distribution of terrorist incidents, as well as identifying any shifts or changes in tactics, targets, or groups involved. Visualizations, such as time series plots and maps, can be helpful for presenting the findings.\n",
+        "\n",
+        "2. **Identifying high-risk regions**: Analyze the dataset to identify regions or countries that are most affected by terrorism. This information can be used by businesses operating in those regions to assess security risks, make informed decisions about investments or expansions, and develop appropriate risk mitigation strategies.\n",
+        "\n",
+        "3. **Risk assessment for supply chains and operations**: Utilize the dataset to assess the potential risks of terrorism along supply chains or operational networks. This can involve analyzing historical incidents to identify areas or routes with higher levels of risk. The insights gained can inform decision-making processes related to supply chain management, logistics, and security measures.\n",
+        "\n",
+        "4. **Impact on the economy**: Investigate the economic impact of terrorism by analyzing its effects on specific sectors, regions, or countries. This analysis can help businesses understand how terrorism may affect their operations, investments, or markets. It can also provide insights into the effectiveness of counter-terrorism measures and policies.\n",
+        "\n",
+        "5. **Identifying terrorist networks**: Utilize the dataset to identify and analyze the relationships and connections between different terrorist groups. Network analysis techniques can be employed to identify key actors, their affiliations, and their roles within the networks. This information can assist law enforcement agencies, intelligence organizations, or security companies in tracking and combating terrorism.\n",
+        "\n",
+        "6. **Predictive modeling**: Develop predictive models using machine learning techniques to forecast future trends in global terrorism. These models can provide early warning systems or risk assessments to aid businesses in proactive decision-making and risk management.\n",
+        "\n",
+        "It's crucial to note that analyzing terrorism data requires sensitivity, ethical considerations, and domain expertise. It's advisable to consult with experts in the field and ensure that any analysis or conclusions drawn from the dataset are interpreted responsibly and in accordance with legal and ethical guidelines."
       ],
       "metadata": {
         "id": "pASKb0qOza21"
@@ -2132,26 +1995,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* The hot zone of terrorism till 2017, is Middle East & North Africa.\n",
+        "**The analysis of the global terrorism dataset provides valuable insights into the patterns and trends of terrorism incidents worldwide. By examining the data, several key conclusions can be drawn:**\n",
         "\n",
-        "* The country which has mostly faced the terror attacks is Iraq.\n",
+        "1. **Increase in terrorism incidents**: Over the years, there has been a significant increase in terrorism incidents globally. This indicates that terrorism continues to be a pressing global issue that requires attention from governments, international organizations, and society as a whole.\n",
         "\n",
-        "* In the year 2014, the number of terror attacks are most.\n",
+        "2. **Geographical distribution**: Terrorism is not limited to specific regions but has a widespread impact across the globe. While certain regions, such as the Middle East and North Africa, have experienced higher incidences of terrorism, it is crucial to recognize that terrorism can occur in various countries and continents.\n",
         "\n",
-        "* The group Taliban has been behind the attacks more than other terrorists\n",
-        "  groups.\n",
+        "3. **Targets and methods**: The dataset reveals that terrorists target a wide range of locations and entities, including civilians, government institutions, religious sites, and economic infrastructure. Furthermore, terrorists employ diverse methods, including bombings, armed assaults, kidnappings, and hijackings, highlighting the need for comprehensive security measures to counter these threats effectively.\n",
         "\n",
-        "* Mostly Bombing/Explosion type attack has been chosen for the terrorism\n",
-        "  acts.\n",
+        "4. **Motivations and ideologies**: The dataset also reflects the diverse motivations and ideologies behind terrorist acts. These can include political, religious, ethnic, or separatist motivations. Understanding these underlying factors is crucial for developing strategies to prevent and mitigate acts of terrorism.\n",
         "\n",
-        "* Private Citizens & Property are mostly targetted following Militaries\n",
-        "  and Police Forces.\n",
+        "5. **Counterterrorism efforts**: The analysis of the dataset demonstrates the importance of international cooperation and concerted efforts to combat terrorism effectively. Sharing intelligence, implementing security measures, and addressing root causes are essential components of any counterterrorism strategy.\n",
         "\n",
-        "* Unclaimed attacks caused most of the casualties in terms of terror\n",
-        "  attacks.\n"
+        "**In conclusion**, the global terrorism dataset serves as a valuable resource for policymakers, researchers, and security professionals to understand and address the multifaceted challenges posed by terrorism. By leveraging the insights gained from this dataset, stakeholders can work towards developing comprehensive strategies that aim to prevent, counter, and ultimately mitigate the impact of terrorism worldwide."
       ],
       "metadata": {
-        "id": "Fjb1IsQkh3yE"
+        "id": "P3m978y5ZG6e"
       }
     },
     {
