--- a/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
+++ b/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
@@ -2016,7 +2016,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ***Hurrah! You have successfully completed your EDA Capstone Project !!!***"
+        "# **Hurrah! You have successfully completed your EDA Capstone Project !!!**"
       ],
       "metadata": {
         "id": "gIfDvo9L0UH2"
