--- a/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
+++ b/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
@@ -6,11 +6,8 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "w6K7xa23Elo4",
-        "yQaldy8SH6Dl",
         "mDgbUHAGgjLW",
         "H0kj-8xxnORC",
-        "PBTbrJXOngz2",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -75,12 +72,9 @@
       "cell_type": "markdown",
       "source": [
         "##### **Project Type**    - EDA\n",
-        "##### **Contribution**    - Team\n",
+        "##### **Contribution**    - Indivisual\n",
         "\n",
-        "##### **Team Member 1 -** Sailendu Kumar Dey\n",
-        "##### **Team Member 2 -** Harshit Thakur\n",
-        "##### **Team Member 3 -**\n",
-        "##### **Team Member 4 -**"
+        "##### **Team Member 1 -** Sailendu Kumar Dey"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
@@ -149,8 +143,8 @@
       "cell_type": "markdown",
       "source": [
         "Provide your GitHub Link here.\n",
-        "1. https://github.com/sailendu-kumar (Sailendu Kumar Dey)\n",
-        "2. https://github.com/harshitthakur1 (Harshit Thakur)\n"
+        "1. https://github.com/sailendu-kumar/Capstone-Project-1--Global-Terrorism-Analysis\n",
+        "\n"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -168,9 +162,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Problem Statement:**\n",
         "\n",
-        "The Global Terrorism Dataset (GTD) analysis aims to address the pressing need for a comprehensive understanding of global terrorism trends and patterns. Despite efforts to combat terrorism, it continues to pose a significant threat to global security, necessitating a deeper examination of the factors and dynamics surrounding this phenomenon.\n",
+        "\n",
+        "**The Global Terrorism Dataset (GTD) analysis** aims to address the pressing need for a comprehensive understanding of global terrorism trends and patterns. Despite efforts to combat terrorism, it continues to pose a significant threat to global security, necessitating a deeper examination of the factors and dynamics surrounding this phenomenon.\n",
         "\n",
         "The problem lies in the limited understanding of the evolving nature of terrorism, including its underlying motivations, geographical hotspots, and the changing tactics employed by terrorist groups. Without a clear understanding of these factors, policymakers and security agencies may struggle to develop effective counter-terrorism strategies that can prevent and mitigate future attacks.\n",
         "\n",
@@ -185,7 +179,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **Define Your Business Objective?**"
+        "# **Define Your Business Objective?**"
       ],
       "metadata": {
         "id": "PH-0ReGfmX4f"
@@ -194,7 +188,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The business objective of conducting an analysis on the Global Terrorism Dataset (GTD) is to provide valuable insights and actionable intelligence to various stakeholders, including governments, international organizations, security agencies, and policymakers. The primary goal is to enhance their understanding of global terrorism trends and patterns, enabling them to develop more effective strategies to combat terrorism and promote global security.\n",
+        "The business objective of conducting an analysis on the **Global Terrorism Dataset (GTD)** is to provide valuable insights and actionable intelligence to various stakeholders, including governments, international organizations, security agencies, and policymakers. The primary goal is to enhance their understanding of global terrorism trends and patterns, enabling them to develop more effective strategies to combat terrorism and promote global security.\n",
         "\n",
         "Specifically, the objectives of the GTD analysis are as follows:\n",
         "\n",
@@ -1844,8 +1838,8 @@
       "cell_type": "code",
       "source": [
         "# visualization of Pair plot\n",
-        "corr_data2 = newdata1[['year', 'country', 'attacktype1', 'targtype1', 'weaptype1', 'natlty1', 'Killed', 'Wounded']]\n",
-        "list[corr_data2.columns]"
+        "corr_data2 = data[['year', 'country', 'Killed','Wounded', 'region', 'attacktype1', 'targtype1', 'natlty1', 'weaptype1']]\n",
+        "list[corr_data2.columns]\n"
       ],
       "metadata": {
         "id": "Ko6ewD8EAKKS"
@@ -1919,10 +1913,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Will the gained insights help creating a positive business impact?\n",
+        "# **Will the gained insights help creating a positive business impact?**\n",
         "Are there any insights that lead to negative growth? Justify with specific reason.\n",
         "\n",
-        "## Positive business impact can be achieved through insights that enable:\n",
+        "## **Positive business impact can be achieved through insights that enable:**\n",
         "\n",
         "**Identification of growth opportunities**: Insights from a pie chart can highlight areas of potential growth or opportunities within specific categories. For example, if a pie chart represents market share by product categories, identifying a category with a smaller share but high growth potential can guide strategic investments to capture a larger market share.\n",
         "\n",
@@ -1930,7 +1924,7 @@
         "\n",
         "**Decision-making based on customer preferences**: Pie charts can provide insights into customer preferences, such as the distribution of sales across different product lines or customer segments. By understanding these preferences, businesses can tailor their marketing strategies, product offerings, and customer experiences to better meet customer needs and preferences.\n",
         "\n",
-        "## Regarding insights that may lead to negative growth, it is possible if the insights reveal unfavorable trends or challenges within certain categories. For example:\n",
+        "## **Regarding insights that may lead to negative growth, it is possible if the insights reveal unfavorable trends or challenges within certain categories. For example:**\n",
         "\n",
         "**Declining market share**: If a pie chart displays market share over time, and a specific category shows a decreasing proportion, it may indicate declining customer interest or increased competition in that category. This insight can signal the need for strategic adjustments to prevent further negative impact.\n",
         "\n",
